<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:numericShortcut="1" android:alphabeticShortcut="i" android:id="@+id/itemInfo" android:title="@string/info" android:icon="@android:drawable/ic_menu_info_details"></item>
    <item android:numericShortcut="2" android:alphabeticShortcut="m" android:id="@+id/itemCenterMouse" android:title="@string/center_mouse" android:icon="@android:drawable/ic_menu_mylocation"/>
    <item android:numericShortcut="3" android:alphabeticShortcut="s" android:id="@+id/itemColorMode" android:title="@string/color_mode" android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:numericShortcut="4" android:alphabeticShortcut="z" android:id="@+id/itemScaling" android:title="@string/scaling" android:icon="@android:drawable/ic_menu_zoom">
    	<menu>
	    	<group android:id="@+id/groupScaling" android:checkableBehavior="single">
	    		<item android:id="@+id/itemOneToOne" android:title="@string/one_to_one"/>
	    		<item android:id="@+id/itemFitToScreen" android:title="@string/fit_to_screen" android:checked="true"/>
	    	</group>
    	</menu>
    </item>
    <item android:numericShortcut="4" android:alphabeticShortcut="p" android:id="@+id/itemInputMode" android:title="@string/input_mode" android:icon="@android:drawable/ic_input_get">
    	<menu>
	    	<group android:checkableBehavior="single">
	    		<item android:id="@+id/itemInputFitToScreen" android:checked="true" android:title="@string/input_mode_fit_to_screen"/>
	    		<item android:id="@+id/itemInputPan" android:title="@string/input_mode_panning"/>
	    		<item android:id="@+id/itemInputMouse" android:title="@string/input_mode_mouse"/>
	    		<item android:id="@+id/itemInputTouchPanTrackballMouse" android:title="@string/input_mode_touchpad_pan_trackball_mouse"/>
	    	</group>
	    </menu>
    </item>
    <item android:numericShortcut="5" android:alphabeticShortcut="d" android:id="@+id/itemDisconnect" android:title="@string/disconnect" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
    <item android:numericShortcut="6" android:alphabeticShortcut="a" android:id="@+id/itemCtrlAltDel" android:title="@string/ctrl_alt_del" android:icon="@android:drawable/ic_menu_share"/>
</menu>
